--- a/Public.UserManage.Web/Views/Role/SysRoleTable.cshtml
+++ b/Public.UserManage.Web/Views/Role/SysRoleTable.cshtml
@@ -35,8 +35,10 @@
                                 @{
 
                                     <a href="javascript:void(0);" onclick="UpdateDialog('@dn.Id')">修改</a>
-                                  
-                                }
+
+    <a href="javascript:void(0);" onclick="DeleteSysRole('@dn.Id')">删除</a>
+
+}
 
                             </div>
                         </td>
