--- a/Public.UserManage.Web/Views/User/SysUserTable.cshtml
+++ b/Public.UserManage.Web/Views/User/SysUserTable.cshtml
@@ -37,10 +37,10 @@
                     
                         <a href="javascript:void(0);" onclick="UpdateDialog('@dn.Id')">修改</a>
     <a href="javascript:void(0);" onclick="LockSysUser('@dn.Id')">@str</a>
-                                    <a href="javascript:void(0);" onclick="UpdateDataDialog('@dn.Id')">修改用户资料</a>
-                    
-                                }
-
+    <a href="javascript:void(0);" onclick="OpenRoleTreeDialog('@dn.Id')">设置角色</a>
+    <a href="javascript:void(0);" onclick="DeleteSysUser('@dn.Id')">删除</a>
+}    
+                                
                             </div>
                         </td>
                     </tr>
